# mcp-memory-ydb

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
mcp_memory_ydb/: __init__.py  cli.py  config.py  providers.py  server.py  setup.py
tests/: test_config.py  test_curation.py
